# dscm

./: .gitignore  CMakeLists.txt  README.md
assets/: 1.txt  2.txt  calibration-double-sphere.json  calibration-equidistant2.json  calibration-equidistant4.json  calibration-extended.json  calibration-fov.json  calibration-unified.json
include/: undist_lite_optical_axis_test.hpp
src/: calc_fx.cpp  compute_extrinsic.cpp  compute_tum_extrinsic.cpp  ds_stereo_rectify.cpp  dscm1_distort.cpp  dscm2_distort.cpp  dscm3_distort.cpp  dscm4_projection.cpp  dscm5_distort.cpp  dscm6_undistort.cpp  dscm7_undistort.cpp  stereorectify_undistort.cpp  stereorectify_undistort2.cpp  stereorectify_undistort_tum.cpp  undistortImage.cpp
